<resources>
    <string name="app_name">TextNotesApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="choose_category">Create category</string>
    <string name="title">Title:</string>
    <string name="category">Category:</string>
    <string name="body">Body:</string>
    <string name="put_your_category_here">Put your category here</string>
    <string name="add">Add</string>
    <string name="enter_text_body_here">enter text body here</string>
    <string name="click_pencil_to_choose">click pencil to choose</string>
    <string name="type_your_title">type your title</string>
</resources>